# protopolis

./: Cargo.toml  README.md  config.json
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-build.yml  release.yml
src/: action.rs  agent.rs  app.rs  config.rs  conversation_manager.rs  logging.rs  main.rs  message.rs  messages.rs  personality.rs  prompt.rs  ratatui.rs  simulation.rs  state.rs  ui.rs  utils.rs  world.rs
