[package]
name = "protopolis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
ollama-rs = "0.2.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
colored = "3.0.0"
rand = "0.9.0"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }