[package]
name = "protopolis"
version = "0.3.2"
edition = "2021"
authors = ["LightInn"]
description = "A simple, fast, and secure chat server."
repository = "https://github.com/LightInn/protopolis"
license = "MIT"
readme = "README.md"
keywords = ["Ollama", "AI-agent", "simulation", "simple"]
categories = ["simulation"]

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
ollama-rs = "0.2.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
colored = "3.0.0"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
rand = "0.9.0"
libc = "0.2.170"


