[package]
name = "protopolis"
version = "0.3.2"
edition = "2021"
authors = ["LightInn"]
description = "A multi-agent Ollama simulation in Rust"
repository = "https://github.com/LightInn/protopolis"
license = "MIT"
readme = "README.md"
keywords = ["Ollama", "AI", "simulation", "CLI", "multi-agent"]
categories = ["simulation"]

[dependencies]
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
ollama-rs = "0.2.5"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
uuid = { version = "1.14.0", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
crossterm = "0.28.1"
ratatui = "0.29.0"


